# promformat

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
promformat/: __init__.py  __main__.py  ast_nodes.py  buffer.py  error.py  formatter.py
promformat/parser/: PromQLLexer.interp  PromQLLexer.py  PromQLLexer.tokens  PromQLParser.interp  PromQLParser.py  PromQLParser.tokens  PromQLParserListener.py  PromQLParserVisitor.py
tests/: test_formatter.py
tests/resources/: test-promql.yaml
