[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promformat"
version = "1.0.2"
requires-python = ">=3.8"
dependencies = [
    "antlr4-python3-runtime>=4.10",
]

[project.optional-dependencies]
test = [
    "pytest",
    "PyYAML",
]
dev = [
    "flake8",
    "black",
]

[project.scripts]
promformat = "promformat.__main__:main"

[tool.setuptools.packages.find]
exclude = ["tests*"]
